--- a/Danhsach.html
+++ b/Danhsach.html
@@ -101,9 +101,10 @@
             <br /><b></b><a target="_blank" href="netchpc.html">👉 Cài NETHCH dùng VPN CHO PC  &nbsp;</a></b></span></li></ul><p></p>
             <!-- < Các gói nền > -->
             <p></p><ul style="text-align: left;"><li><span style="font-size: medium;"><b> Tổng Hợp Gói Nền (SNI) <br />
-                <br /><b></b><a target="_blank" href="lq.html">👉 Lấy gói nền ping thấp cho liên quân  &nbsp;</a></b></span></li></ul><p></p>
-                <br /><b></b><a target="_blank" href="snii.html">👉 Cách dùng cho nhà mạng khác không phải VT  &nbsp;</a></b></span></li></ul><p></p>
-                <br /><b></b><a target="_blank" href="mobi.html">👉 Cách dùng cho mobifone  &nbsp;</a></b></span></li></ul><p></p>
+                <br /><b></b><a target="_blank" href="lq.html">👉 Lấy gói nền ping thấp cho liên quân  &nbsp;</a>
+                <br /><b></b><a target="_blank" href="snii.html">👉 Cách dùng cho nhà mạng khác không phải VT  &nbsp;</a>
+                <br /><b></b><a target="_blank" href="mobi.html">👉 Cách dùng cho mobifone  &nbsp;</a>
+                <br /><b></b><a target="_blank" href="vina.html">👉 Vina  &nbsp;</a></b></span></li></ul><p></p>
 <!-- JavaScript Libraries -->
        <div class="container-fluid bg-dark text-light footer pt-5 wow fadeIn" data-wow-delay="0.1s" style="margin-top: 6rem;">
             <div class="container py-5">
