--- a/Danhsach.html
+++ b/Danhsach.html
@@ -86,7 +86,8 @@
 
         <!-- < androi  > -->
 <p></p><ul style="text-align: left;"><li><span style="font-size: medium;"><b>Hướng dẫn cho ANDROI<br /><a href="addsvandroi.html">👉Hướng dẫn dùng App V2ray và add server &nbsp;</a></b><br />
-<br /><b><a href="phatwifiandroi.html">👉Phát wifi cho thiết bị khác &nbsp;</a></b></span></li></ul><p></p>
+    <br /><b><a href="phatwifiroot.html">👉Phát wifi cho thiết bị khác ( root ) &nbsp;</a>
+    <br /><b><a href="phatwifiandroi.html">👉Phát wifi cho thiết bị khác (no root) &nbsp;</a></b></span></li></ul><p></p>
         <!-- < IOS > -->
         <p></p><ul style="text-align: left;"><li><span style="font-size: medium;"><b>Dùng VPN hack trên router chạy openwrt ?<br />
             <br /><b></b><a href="taiappios.html">👉Cách tải app bằng APPLE ID &nbsp;</a><br />
