--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>ECHXANH DATA VIETTEL GIÁ RẺ</title>
+    <title>ECHXANH DATA VIETTEL , VIETNAMOBILE GIÁ RẺ</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -97,7 +97,7 @@
                         <p class="mb-4">Tiếp kiệm chi phí đăng ký dịch vụ data hàng tháng ! tốc độ cao hơn dung lượng data lớn hơn từ nhà mạng với 1000gb mỗi tháng
                         </p> Chỉ từ 30k / tháng có ngay 1000gb 
                         </p>Hỗ trợ tất cả thiết bị IOS / Androi / Pc / TV (Androi) / Router (hỗ trợ openwrt)
-                        </p>
+                        </p>Hỗ trợ nhà mạng Viettel , Mobifone , Vina , Vietnamoblie
                         <div class="row g-3 mb-4">
                             <div class="col-12 d-flex">
                                 <div class="flex-shrink-0 btn-lg-square rounded-circle bg-primary">
@@ -130,7 +130,7 @@
                         <div class="d-inline-block border rounded-pill text-primary px-4 mb-3">🤖📢</div>
                         <h2 class="mb-4">Sơ qua về dịch vụ </h2>
                         <p>Hàng tháng bạn phải bỏ ra 50k để mua gói Umax50N của viettel để được 5gb tốc độ cao hết 5gb về tốc độ bình thường giật lag gây cảm giác khó chịu . Hay các bạn đang dùng các gói internet khác gặp trường hợp giá thành cao nhưng trải nghiệm không tốt thì hãy thử VPN bên mình !</p>
-                        <p>CHỉ Hỗ Trợ Sim Của Nhà Mạng Viettel</p>
+                        <p>Hỗ trợ nhà mạng Viettel , Vietnamoblie , Mobifone (Cần gói nền) , Vina (Cần gói nền)</p>
                         <a class="btn btn-primary rounded-pill py-3 px-5 mt-2" href="https://www.facebook.com/lehoailam3005" target="_blank">Mua Ngay</a>
                     </div>
                     <div class="col-lg-7">
@@ -140,7 +140,7 @@
                                     <div class="flex-shrink-0 btn-square bg-primary rounded-circle me-3">
                                         <i class="fa fa-cubes text-white"></i>
                                     </div>
-                                    <h6 class="mb-0">SIM 0đ Vẫn dùng được</h6>
+                                    <h6 class="mb-0"> Nhà mạng Viettel , Vietnamoblie 0đ Vẫn dùng được | Mobifone (Cần gói nền) , Vina (Cần gói nền)</h6>
                                 </div>
                                 <span>Vì đây là VPN chạy qua một server khác nên không cần có tiền trong tài khoản sim </span>
                             </div>
