--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
                                     <div class="flex-shrink-0 btn-square bg-primary rounded-circle me-3">
                                         <i class="fa fa-cubes text-white"></i>
                                     </div>
-                                    <h6 class="mb-0"> Nhà mạng Viettel , Vietnamoblie 0đ Vẫn dùng được | Mobifone (Cần gói nền) , Vina (Cần gói nền)</h6>
+                                    <h6 class="mb-0"> Hỗ trợ nhà mạng nào ? </h6>
                                 </div>
-                                <span>Vì đây là VPN chạy qua một server khác nên không cần có tiền trong tài khoản sim </span>
+                                <span>Viettel , Vietnamoblie 0đ Vẫn dùng được | Mobifone (Cần gói nền) , Vina (Cần gói nền)</span>
                             </div>
                             <div class="col-sm-6 wow fadeIn" data-wow-delay="0.2s">
                                 <div class="d-flex align-items-center mb-3">
