--- a/Danhsach.html
+++ b/Danhsach.html
@@ -87,6 +87,7 @@
         <!-- < androi  > -->
 <p></p><ul style="text-align: left;"><li><span style="font-size: medium;"><b>Hướng dẫn cho ANDROI<br /><a href="addsvandroi.html">👉Hướng dẫn dùng App V2ray và add server &nbsp;</a></b><br />
     <br /><b><a href="phatwifiroot.html">👉Phát wifi cho thiết bị khác ( root ) &nbsp;</a>
+    <br /><b><a href="clash.html">👉 Cách sử dụng Clash for androi &nbsp;</a>
     <br /><b><a href="phatwifiandroi.html">👉Phát wifi cho thiết bị khác (no root) &nbsp;</a></b></span></li></ul><p></p>
         <!-- < IOS > -->
         <p></p><ul style="text-align: left;"><li><span style="font-size: medium;"><b>Dùng VPN hack trên router chạy openwrt ?<br />
