--- a/clash.html
+++ b/clash.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Gói nền Liên QUÂN</title>
+    <title>Hướng Dẫn Cách Sử Dụng Clash For Androi</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
