--- a/chuyenhuong1.html
+++ b/chuyenhuong1.html
@@ -4,9 +4,9 @@
     <link href="https://www.seekpng.com/png/detail/948-9486303_316-kb-png-pepe-the-frog-icon.png" rel="icon">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1;url=https://echxanh.cf/addsv">
+        <meta http-equiv="refresh" content="1;url=https://echxanh.cf/addsv7749">
         <script type="text/javascript">
-            window.location.href = "https://echxanh.cf/addsv"
+            window.location.href = "https://echxanh.cf/addsv7749"
         </script>
         <title>Page Redirection</title>
     </head>
