--- a/chuyenhuong1.html
+++ b/chuyenhuong1.html
@@ -4,9 +4,9 @@
     <link href="https://www.seekpng.com/png/detail/948-9486303_316-kb-png-pepe-the-frog-icon.png" rel="icon">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1;url=https://echxanh.cf/addsv7749">
+        <meta http-equiv="refresh" content="1;url=clash://install-config?url=https://subscribe.genzpn.com/api/v1/client/subscribe?token=e4334426323c11d37f684de511566e11&name=ECH%20XANH">
         <script type="text/javascript">
-            window.location.href = "https://echxanh.cf/addsv7749"
+            window.location.href = "clash://install-config?url=https://subscribe.genzpn.com/api/v1/client/subscribe?token=e4334426323c11d37f684de511566e11&name=ECH%20XANH"
         </script>
         <title>Page Redirection</title>
     </head>
