--- a/echxanh/index.html
+++ b/echxanh/index.html
@@ -115,14 +115,14 @@
 	</div>
 	<!-- Features -->
 	<ul class="feature-list">
-		<li>Android App / IOS App</li>
-		<li>One time payment</li>
-		<li>Build & Publish</li>
-		<li>Life time support</li>
+		<li>Hỗ Androi / Ios</li>
+		<li>1 thiết bị sử dụng</li>
+		<li>1000 gb data tốc độ cao </li>
+		<li>Hỗ trợ mua sim viettel 50k / sim</li>
 	</ul>
 	<!-- Take Action -->
 	<div class="action-button">
-		<a href="" class="btn btn-main-rounded">Start Now</a>
+		<a href="https://www.facebook.com/messages/t/lehoailam3005" class="btn btn-main-rounded">Liên Hệ</a>
 	</div>
 </div>
 			</div>
@@ -139,14 +139,14 @@
 	</div>
 	<!-- Features -->
 	<ul class="feature-list">
-		<li>Android App</li>
-		<li>One time payment</li>
-		<li>Build & Publish</li>
-		<li>Life time support</li>
+		<li>Hỗ Androi / Ios</li>
+		<li>1 thiết bị sử dụng</li>
+		<li>1000 gb data tốc độ cao </li>
+		<li>Hỗ trợ mua sim viettel 50k / sim</li>
 	</ul>
 	<!-- Take Action -->
 	<div class="action-button">
-		<a href="" class="btn btn-main-rounded">Start Now</a>
+		<a href="https://www.facebook.com/messages/t/lehoailam3005" class="btn btn-main-rounded">Liên Hệ</a>
 	</div>
 </div>
 			</div>
@@ -163,15 +163,15 @@
 	</div>
 	<!-- Features -->
 	<ul class="feature-list">
-		<li>Android App</li>
-		<li>One time payment</li>
-		<li>Build & Publish</li>
-		<li>Life time support</li>
+		<li>Hỗ Androi / Ios</li>
+		<li>1 thiết bị sử dụng</li>
+		<li>1000 gb data tốc độ cao </li>
+		<li>Hỗ trợ mua sim viettel 50k / sim</li>
 	</ul>
 	
 	<!-- Take Action -->
 	<div class="action-button">
-		<a href="" class="btn btn-main-rounded">Start Now</a>
+		<a href="https://www.facebook.com/messages/t/lehoailam3005" class="btn btn-main-rounded">Liên Hệ</a>
 	</div>
 </div>
 			</div>
