--- a/openclas.html
+++ b/openclas.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Hướng Dẫn Cách Sử Dụng Clash For Androi</title>
+    <title>Hướng dẫn sử dụng clash for androi</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
 
     <!-- Favicon -->
- <link href="https://www.seekpng.com/png/detail/948-9486303_316-kb-png-pepe-the-frog-icon.png" rel="icon">
+ <link href="https://play-lh.googleusercontent.com/lgX_EpZWtSDtQNLQYjLR6oam2I6QSubVKFlfXHYaVNIDFljeCI_FL8ULOD_2V4118UE=s180-rw" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -80,7 +80,25 @@
         </div>
             <p>&nbsp;</p><p><br /><br /><br /><br />
                 <!-- < link bloger ở phần này  > -->
-                <p style="-webkit-tap-highlight-color: transparent; background-color: white; box-sizing: border-box; line-height: 1.6; margin-bottom: 1.75rem; margin-top: 0px;"></p><div style="text-align: center;"><b><span style="font-size: x-large;">Cài đặt như video nhé !<br /></span></b><p style="-webkit-tap-highlight-color: transparent; background-color: white; box-sizing: border-box; font-family: Inter, -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, Roboto, &quot;Helvetica Neue&quot;, Arial, &quot;Noto Sans&quot;, &quot;Liberation Sans&quot;, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;, &quot;Noto Color Emoji&quot;; line-height: 1.6; margin-bottom: 1.75rem; margin-top: 0px; text-align: left;"><b><span style="font-size: x-large;"><br /></span></b></p><div class="separator" style="clear: both; text-align: center;"><b><span style="font-size: x-large;"><iframe allowfullscreen="" class="BLOG_video_class" height="720" src="https://www.youtube.com/embed/uNnGUZ6GAbk" width="1280" youtube-src-id="uNnGUZ6GAbk"></iframe></span></b></div></div><p></p><p></p>
+                <p></p><div class="separator" style="clear: both; text-align: center;"><br /></div><br />&nbsp;<div class="separator" style="clear: both; text-align: center;"><br /></div><br /><p></p><div class="separator" style="clear: both; text-align: center;">
+<span style="background-color: white; color: #404040; font-family: Arimo, Tahoma, Arial; font-size: 17px;">&nbsp;</span>
+<a  href="https://play.google.com/store/apps/details?id=com.github.kr328.clash&hl=vi&gl=US" id="single-theme-download" style="background: rgb(26, 107, 178); border: none; box-sizing: inherit; color: white; display: inline-block; font-family: &quot;Hammersmith One&quot;, Tahoma, Arial; font-size: 1.125rem; margin: 0px 0.3em 10px 0px; padding: 0.4em 1.6em; text-decoration-line: none; text-transform: uppercase; transition: all 0.3s ease;">TẢI APP </a></a></div><div class="separator" style="clear: both; text-align: center;"></a><br /><br /><br /></div><div class="separator" style="clear: both; text-align: center;"></a><br /><br /><br /></div><div class="separator" style="clear: both; text-align: center;">
+<img src="https://cdn.discordapp.com/attachments/899297683582365726/973487697052176394/Khong_co_tieu_e_960_720_px_480_720_px_540_960_px.gif" width="360" /></a><br /><br /><br /></div><div class="separator" style="clear: both; text-align: center;">
+<!-- < Nút bấm chuyển hướng  > -->
+<span style="background-color: white; color: #404040; font-family: Arimo, Tahoma, Arial; font-size: 17px;">&nbsp;</span>
+<!--a  href="LINK" id="single-theme-download" style="background: rgb(26, 107, 178); border: none; box-sizing: inherit; color: white; display: inline-block; font-family: &quot;Hammersmith One&quot;, Tahoma, Arial; font-size: 1.125rem; margin: 0px 0.3em 10px 0px; padding: 0.4em 1.6em; text-decoration-line: none; text-transform: uppercase; transition: all 0.3s ease;">Chuyển đến Clash For Androi </a></a></div><div class="separator" style="clear: both; text-align: center;">
+<! < Nút bấm chuyển hướng  > -->
+<img src="https://media.discordapp.net/attachments/862472063403032576/973496455878803506/Openclash_3.gif?width=329&amp;height=586" width="329" /></a></div><div class="separator" style="clear: both; text-align: center;">
+<img src="https://media.discordapp.net/attachments/862472063403032576/973496462069596180/Openclash_4.gif?width=329&height=586" width="329" /></a></div><div class="separator" style="clear: both; text-align: center;">
+<img src="https://media.discordapp.net/attachments/862472063403032576/973496473431990362/Openclash_5.gif?width=329&height=586" width="329" /></a></div><div class="separator" style="clear: both; text-align: center;">
+<img src="https://media.discordapp.net/attachments/862472063403032576/973496479081713704/Openclash_6.gif?width=329&height=586" width="329" /></a></div><div class="separator" style="clear: both; text-align: center;">
+<img src="https://media.discordapp.net/attachments/862472063403032576/973496486878912543/Openclash_7.gif?width=329&height=586" width="329" /></a></div><div class="separator" style="clear: both; text-align: center;">
+<img src="https://media.discordapp.net/attachments/862472063403032576/973496491366817802/Openclash_8.gif?width=329&height=586" width="329" /></a></div><div class="separator" style="clear: both; text-align: center;">
+<img src="https://media.discordapp.net/attachments/862472063403032576/973496517497344000/Khong_co_tieu_e_960_720_px_480_720_px_540_960_px_1.gif?width=329&height=586" width="329" /></a></div><div class="separator" style="clear: both; text-align: center;">
+<img src="https://media.discordapp.net/attachments/862472063403032576/973496521846837318/Khong_co_tieu_e_960_720_px_480_720_px_540_960_px_2.gif?width=329&height=586" width="329" /></a></div><div class="separator" style="clear: both; text-align: center;">
+<img src="https://media.discordapp.net/attachments/862472063403032576/973496549676048464/Khong_co_tieu_e_960_720_px_480_720_px_540_960_px_3.gif?width=329&height=586" width="329" /></a></div><div class="separator" style="clear: both; text-align: center;">
+<img src="https://media.discordapp.net/attachments/862472063403032576/973496560182779955/Khong_co_tieu_e_960_720_px_480_720_px_540_960_px_5.gif?width=329&height=586" width="329" /></a></div><div class="separator" style="clear: both; text-align: center;">
+<img src="https://media.discordapp.net/attachments/862472063403032576/973496554373660712/Khong_co_tieu_e_960_720_px_480_720_px_540_960_px_4.gif?width=329&height=586" width="329" /></a><br /><br /><br /></div><br /><div class="separator" style="clear: both; text-align: center;"><br /></div><br /><div class="separator" style="clear: both; text-align: center;"><br /></div><br />
                  <!-- < link bloger ở phần này  > -->
 <div class="container-fluid bg-dark text-light footer pt-5 wow fadeIn" data-wow-delay="0.1s" style="margin-top: 6rem;">
     <div class="container py-5">
