--- a/openclas.html
+++ b/openclas.html
@@ -30,7 +30,20 @@
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
 </head>
-
+<style>
+    p.indent{ padding-left: 1.8em }
+    img 
+    {
+        border: 5px solid rgb(0, 0, 0);
+        border-radius: 10px;
+        padding: 10px;
+    }
+    img:hover
+    {
+        box-shadow: 1px 1px 1px rgb(0, 0, 0);
+    }
+    
+    </style>
 <body>
     <div class="container-xxl bg-white p-0">
         <!-- Spinner Start -->
@@ -88,16 +101,16 @@
 <span style="background-color: white; color: #404040; font-family: Arimo, Tahoma, Arial; font-size: 17px;">&nbsp;</span>
 <!--a  href="LINK" id="single-theme-download" style="background: rgb(26, 107, 178); border: none; box-sizing: inherit; color: white; display: inline-block; font-family: &quot;Hammersmith One&quot;, Tahoma, Arial; font-size: 1.125rem; margin: 0px 0.3em 10px 0px; padding: 0.4em 1.6em; text-decoration-line: none; text-transform: uppercase; transition: all 0.3s ease;">Chuyển đến Clash For Androi </a></a></div><div class="separator" style="clear: both; text-align: center;">
 <! < Nút bấm chuyển hướng  > -->
-<img src="https://media.discordapp.net/attachments/862472063403032576/973496455878803506/Openclash_3.gif?width=329&amp;height=586" width="329" /></a></div><div class="separator" style="clear: both; text-align: center;">
-<img src="https://media.discordapp.net/attachments/862472063403032576/973496462069596180/Openclash_4.gif?width=329&height=586" width="329" /></a></div><div class="separator" style="clear: both; text-align: center;">
-<img src="https://media.discordapp.net/attachments/862472063403032576/973496473431990362/Openclash_5.gif?width=329&height=586" width="329" /></a></div><div class="separator" style="clear: both; text-align: center;">
-<img src="https://media.discordapp.net/attachments/862472063403032576/973496479081713704/Openclash_6.gif?width=329&height=586" width="329" /></a></div><div class="separator" style="clear: both; text-align: center;">
-<img src="https://media.discordapp.net/attachments/862472063403032576/973496486878912543/Openclash_7.gif?width=329&height=586" width="329" /></a></div><div class="separator" style="clear: both; text-align: center;">
-<img src="https://media.discordapp.net/attachments/862472063403032576/973496491366817802/Openclash_8.gif?width=329&height=586" width="329" /></a></div><div class="separator" style="clear: both; text-align: center;">
-<img src="https://media.discordapp.net/attachments/862472063403032576/973496517497344000/Khong_co_tieu_e_960_720_px_480_720_px_540_960_px_1.gif?width=329&height=586" width="329" /></a></div><div class="separator" style="clear: both; text-align: center;">
-<img src="https://media.discordapp.net/attachments/862472063403032576/973496521846837318/Khong_co_tieu_e_960_720_px_480_720_px_540_960_px_2.gif?width=329&height=586" width="329" /></a></div><div class="separator" style="clear: both; text-align: center;">
-<img src="https://media.discordapp.net/attachments/862472063403032576/973496549676048464/Khong_co_tieu_e_960_720_px_480_720_px_540_960_px_3.gif?width=329&height=586" width="329" /></a></div><div class="separator" style="clear: both; text-align: center;">
-<img src="https://media.discordapp.net/attachments/862472063403032576/973496560182779955/Khong_co_tieu_e_960_720_px_480_720_px_540_960_px_5.gif?width=329&height=586" width="329" /></a></div><div class="separator" style="clear: both; text-align: center;">
+<img src="https://media.discordapp.net/attachments/862472063403032576/973496455878803506/Openclash_3.gif?width=329&amp;height=586" width="329" /></a></div><div class="separator" style="clear: both; text-align: center;"><br />
+<img src="https://media.discordapp.net/attachments/862472063403032576/973496462069596180/Openclash_4.gif?width=329&height=586" width="329" /></a></div><div class="separator" style="clear: both; text-align: center;"><br />
+<img src="https://media.discordapp.net/attachments/862472063403032576/973496473431990362/Openclash_5.gif?width=329&height=586" width="329" /></a></div><div class="separator" style="clear: both; text-align: center;"><br />
+<img src="https://media.discordapp.net/attachments/862472063403032576/973496479081713704/Openclash_6.gif?width=329&height=586" width="329" /></a></div><div class="separator" style="clear: both; text-align: center;"><br />
+<img src="https://media.discordapp.net/attachments/862472063403032576/973496486878912543/Openclash_7.gif?width=329&height=586" width="329" /></a></div><div class="separator" style="clear: both; text-align: center;"><br />
+<img src="https://media.discordapp.net/attachments/862472063403032576/973496491366817802/Openclash_8.gif?width=329&height=586" width="329" /></a></div><div class="separator" style="clear: both; text-align: center;"><br />
+<img src="https://media.discordapp.net/attachments/862472063403032576/973496517497344000/Khong_co_tieu_e_960_720_px_480_720_px_540_960_px_1.gif?width=329&height=586" width="329" /></a></div><div class="separator" style="clear: both; text-align: center;"><br />
+<img src="https://media.discordapp.net/attachments/862472063403032576/973496521846837318/Khong_co_tieu_e_960_720_px_480_720_px_540_960_px_2.gif?width=329&height=586" width="329" /></a></div><div class="separator" style="clear: both; text-align: center;"><br />
+<img src="https://media.discordapp.net/attachments/862472063403032576/973496549676048464/Khong_co_tieu_e_960_720_px_480_720_px_540_960_px_3.gif?width=329&height=586" width="329" /></a></div><div class="separator" style="clear: both; text-align: center;"><br />
+<img src="https://media.discordapp.net/attachments/862472063403032576/973496560182779955/Khong_co_tieu_e_960_720_px_480_720_px_540_960_px_5.gif?width=329&height=586" width="329" /></a></div><div class="separator" style="clear: both; text-align: center;"><br />
 <img src="https://media.discordapp.net/attachments/862472063403032576/973496554373660712/Khong_co_tieu_e_960_720_px_480_720_px_540_960_px_4.gif?width=329&height=586" width="329" /></a><br /><br /><br /></div><br /><div class="separator" style="clear: both; text-align: center;"><br /></div><br /><div class="separator" style="clear: both; text-align: center;"><br /></div><br />
                  <!-- < link bloger ở phần này  > -->
 <div class="container-fluid bg-dark text-light footer pt-5 wow fadeIn" data-wow-delay="0.1s" style="margin-top: 6rem;">
