--- a/Danhsach.html
+++ b/Danhsach.html
@@ -85,14 +85,13 @@
 <p></p><ul style="text-align: left;"><li><span style="font-size: medium;"><b>Fix lỗi không có thông báo<br /><a href="fixthongbao.html">👉Hướng dẫn fix lỗi không thông báo&nbsp;</a></b></span></li></ul><p></p>
 
         <!-- < androi  > -->
-<p></p><ul style="text-align: left;"><li><span style="font-size: medium;"><b>Hướng dẫn cho ANDROI<br /><a href="addsvandroi.html">👉Hướng dẫn dùng App V2ray và add server &nbsp;</a></b><br />
+<p></p><ul style="text-align: left;"><li><span style="font-size: medium;"><b>Hướng dẫn cho ANDROI<br />
     <br /><b><a href="phatwifiroot.html">👉Phát wifi cho thiết bị khác ( root ) &nbsp;</a>
     <br /><b><a href="openclas.html">👉 Cách sử dụng Clash for androi &nbsp;</a>
     <br /><b><a href="phatwifiandroi.html">👉Phát wifi cho thiết bị khác (no root) &nbsp;</a></b></span></li></ul><p></p>
         <!-- < IOS > -->
         <p></p><ul style="text-align: left;"><li><span style="font-size: medium;"><b>Dùng VPN hack trên router chạy openwrt ?<br />
             <br /><b></b><a href="taiappios.html">👉Cách tải app bằng APPLE ID &nbsp;</a><br />
-            <br /><b></b><a href="addsvios.html">👉add server vào Shadowrocket&nbsp;</a><br />
             <br /><b></b><a href="settingtubanvpn.html">👉cách setting tự bật VPN khi dùng 4g và tự tắt khi dùng wifi&nbsp;</a><br />
             <br /><b></b><a href="phatwifiios.html">👉phát wifi cho thiết bị khác&nbsp;</a></b></span></li></ul><p></p>
         <!-- < FIX THONG BAO> -->
