--- a/Danhsach.html
+++ b/Danhsach.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title> Fix lag khi chơi liên quân </title>
+    <title> Tổng hợp hướng dẫn </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
