--- a/index.html
+++ b/index.html
@@ -177,6 +177,9 @@
           <h6 class="mb-0">Hỗ trợ tải app shadowrocket</h6>
          </div>
          <span>Các thiết bị IOS hay Iphone khi dùng phải tải app shadowrocket trên apptore giá 69K nhưng bên mình hỗ trợ tải và sử dụng với giá 0đ khi mua gói bên mình</span>
+                   <h6 class="mb-0">HOÀN TIỀN KHI KHÔNG SỬ DỤNG ?</h6>
+         </div>
+         <span>Không hoàn tiền khi đã mua gói ! </span>
         </div>
        </div>
       </div>
