--- a/app.html
+++ b/app.html
@@ -21,7 +21,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="7;url=https://js.lhlechxanh.tk/">
+    <meta http-equiv="refresh" content="30;url=https://lhlechxanh.tk/">
     <?php wp_head(); ?>
 </head>
 <body <?php body_class(); ?>>
